Bug 113179 - Referenced cells no longer colored
Summary: Referenced cells no longer colored
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.4.2.2 release
Hardware: All All
: medium normal
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:6.0.0 target:5.4.4
Keywords: bibisected, bisected, regression
: 113401 113456 113466 113497 113518 113636 113691 113801 114065 114576 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-10-17 10:42 UTC by Lenge
Modified: 2018-01-09 15:20 UTC (History)
15 users (show)

See Also:
Crash report or crash signature:


Attachments
Simple test document (10.00 KB, application/vnd.oasis.opendocument.spreadsheet)
2017-10-17 11:09 UTC, Lenge
Details
Screenshots taken with LO 5.3.6 and 5.4.2 (456.02 KB, application/zip)
2017-10-17 11:49 UTC, Lenge
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lenge 2017-10-17 10:42:05 UTC
Description:
In the 5.4.2 release, Calc no longer highlights referenced cells or cell ranges with different colors while editing a formula. (The option "Tools\Options...\LibreOffice Calc\View\Display\[x] Show references in color" is still checked.)

Steps to Reproduce:
1. Enter the formula "= B2" into cell A1.
2. Edit the formula.

Actual Results:  
Cell B2 is no longer shown with a colored frame.

Expected Results:
Cell B2 should be highlighted with a colored frame.


Reproducible: Always

User Profile Reset: No

Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 6.3; Win64; x64; rv:56.0) Gecko/20100101 Firefox/56.0
Comment 1 Xisco Faulí 2017-10-17 10:57:51 UTC Comment hidden (obsolete)
Comment 2 Lenge 2017-10-17 11:09:35 UTC
Created attachment 137044 [details]
Simple test document

Ok, I have attached a simple test document (Test.ods).
Comment 3 Xisco Faulí 2017-10-17 11:18:05 UTC Comment hidden (obsolete)
Comment 4 Lenge 2017-10-17 11:49:23 UTC
Created attachment 137047 [details]
Screenshots taken with LO 5.3.6 and 5.4.2

Here are more detailed instructions. The screenshots taken with LibreOffice 5.3.6 show what *should* happen (but no longer does in 5.4.2).

1. Open LibreOffice Calc
2. Open "Test.ods"
3. Click cell A1
(=> The formula "= B2" appears in the "Input line" edit field at the top)
4. Click anywhere in the "Input line"
(=> Cell B2 should be highligthed with a blue box, see "Example1.jpg")
5. Exit the "Input line" and click cell B15
(=> The formula "= SUM(B4:B8)" appears in the "Input line")
6. Click anywhere in the "Input line"
(=> The range B4:B8 should be highligthed with a blue box, see "Example2.jpg")
Comment 5 Lenge 2017-10-17 11:55:25 UTC
(In reply to Xisco Faulí from comment #3)
> if I double click on cell A1 the blue border around B2 is displayed.

Sorry, I didn't notice that before. I can confirm that the bug does not happen when editing is done by double-clicking a cell, but only when the "Input line" is used. (In this case, also the formula shown in the edited cell isn't colored.)
Comment 6 raal 2017-10-17 15:21:35 UTC
confirm LO 6, linux
Comment 7 raal 2017-10-17 15:48:30 UTC
This seems to have begun at the below commit.
Adding Cc: to Eike Rathke  ; Could you possibly take a look at this one?
Thanks
 f308cf47b5557e9890026ed0939bdf9caa31d174 is the first bad commit
commit f308cf47b5557e9890026ed0939bdf9caa31d174
Author: Jenkins Build User <tdf@pollux.tdf>
Date:   Thu Aug 24 19:34:46 2017 +0200

    source d31a8263d564ebd7886f6debdf36cedd031915ea

author	Eike Rathke <erack@redhat.com>	2017-08-24 14:34:55 (GMT)
committer	Eike Rathke <erack@redhat.com>	2017-08-24 14:37:15 (GMT)
commit d31a8263d564ebd7886f6debdf36cedd031915ea (patch)
tree 494dbabd49cdd5d9a5cbb44ce28fa35894e58707
parent 73ee631e58f392415f23e98460ff4b2f3a763d37 (diff)
Resolves: tdf#108795 merge table EditEngine language attributes to input line
Comment 8 Eike Rathke (retired, only occasionally showing up) 2017-10-19 13:34:26 UTC
Investigating.
Comment 9 Commit Notification 2017-10-19 17:34:14 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8112af3361fdf15fcf5d3177cd967e1d8d97d5f3

Resolves: tdf#113179 merge language attributes early, tdf#108795 follow-up

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Eike Rathke (retired, only occasionally showing up) 2017-10-19 18:30:09 UTC
Pending review https://gerrit.libreoffice.org/43572 for 5-4
Comment 11 ThierryT 2017-10-21 15:19:33 UTC
Still exists on this version 

Version: 5.4.3.1 (x64)
Build ID: 32c8895c6cae21571f364dbb059f419a743ee44d
Threads CPU : 4; OS : Windows 6.29; UI Render : par défaut; 
Locale : fr-FR (fr_FR); Calc: group
Comment 12 Xisco Faulí 2017-10-21 15:22:26 UTC
(In reply to ThierryT from comment #11)
> Still exists on this version 
> 
> Version: 5.4.3.1 (x64)
> Build ID: 32c8895c6cae21571f364dbb059f419a743ee44d
> Threads CPU : 4; OS : Windows 6.29; UI Render : par défaut; 
> Locale : fr-FR (fr_FR); Calc: group

please try with a master build from http://dev-builds.libreoffice.org/daily/master/
You can install it alongside the standard version.
Comment 13 ThierryT 2017-10-22 09:00:11 UTC
I tested the master version :

Version: 6.0.0.0.alpha1+ (x64)
Build ID: b19e1a145bcdaab7ccd4c4c84dd3bd9795403cd5
CPU threads: 4; OS: Windows 6.3; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2017-10-21_23:57:09
Locale: fr-FR (fr_FR); Calc: CL

Bug is fixed on this version.
Do you apply the correction on the next version 5.4.3.2 ?
Comment 14 raal 2017-10-22 12:03:10 UTC
(In reply to ThierryT from comment #13)
> 
> Bug is fixed on this version.
> Do you apply the correction on the next version 5.4.3.2 ?

Yes, see comment 10
Comment 15 Commit Notification 2017-10-22 18:05:40 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=99fdaf683e6403b1d8a70d48ebe0e20194017624&h=libreoffice-5-4

Resolves: tdf#113179 merge language attributes early, tdf#108795 follow-up

It will be available in 5.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Eike Rathke (retired, only occasionally showing up) 2017-10-24 12:17:18 UTC
(In reply to raal from comment #14)
> (In reply to ThierryT from comment #13)
> > 
> > Bug is fixed on this version.
> > Do you apply the correction on the next version 5.4.3.2 ?
> 
> Yes, see comment 10
Actually no, see comment 15 ;-)
Comment 17 Eike Rathke (retired, only occasionally showing up) 2017-10-24 14:14:21 UTC
*** Bug 113401 has been marked as a duplicate of this bug. ***
Comment 18 Xisco Faulí 2017-10-26 10:02:05 UTC
*** Bug 113456 has been marked as a duplicate of this bug. ***
Comment 19 raal 2017-10-26 17:35:11 UTC
*** Bug 113466 has been marked as a duplicate of this bug. ***
Comment 20 Xisco Faulí 2017-10-28 18:09:13 UTC
*** Bug 113497 has been marked as a duplicate of this bug. ***
Comment 21 Xisco Faulí 2017-10-30 11:52:34 UTC
*** Bug 113518 has been marked as a duplicate of this bug. ***
Comment 22 Xisco Faulí 2017-11-04 08:59:40 UTC
*** Bug 113636 has been marked as a duplicate of this bug. ***
Comment 23 Eike Rathke (retired, only occasionally showing up) 2017-11-07 12:15:45 UTC
*** Bug 113691 has been marked as a duplicate of this bug. ***
Comment 24 Eike Rathke (retired, only occasionally showing up) 2017-11-13 11:36:45 UTC
*** Bug 113801 has been marked as a duplicate of this bug. ***
Comment 25 Eike Rathke (retired, only occasionally showing up) 2017-11-17 12:33:30 UTC Comment hidden (obsolete)
Comment 26 Eike Rathke (retired, only occasionally showing up) 2017-11-26 17:10:02 UTC
*** Bug 114065 has been marked as a duplicate of this bug. ***
Comment 27 Jean-Baptiste Faure 2017-12-23 22:32:38 UTC
*** Bug 114576 has been marked as a duplicate of this bug. ***