Resolves: tdf#113179 merge language attributes early, tdf#108795 follow-up

Merging attributes from table to top EditEngine has to be done
before colorizing with the range finder, as the resulting merged
default item set *overwrites* the items set.

Change-Id: I6561201de11344161f61d7d4cf6a7b79d76ba493